# soft_circles

./: .gitmodules  pyproject.toml  setup.py
lib/: soft_circle_module.h  soft_circles_module.cpp  vec2.h
lib/soft_circles/: eval_space.h  eval_space_oosb.cpp  force_conveyors.h  keeper.h  soft_circle.h
lib/soft_circles/eval_space/: evaluate_forces.h  interactions.h  oosb.h  tick.h
lib/soft_circles_module/: eval_space.h  forces.h  soft_circle.h
lib/soft_circles_module/objects/: _es_bindable.h  bound_iter.h  eval_space.h  exceptions.h  force_conveyor.h  keeper.h  soft_circle.h
lib/soft_circles_module/objects/eval_space/: get_bound.h
lib/soft_circles_module/objects/force_conveyor/: force_conveyor_callback.h  force_conveyor_make.h  force_conveyors_binders.h
lib/soft_circles_module/objects/keeper/: keeper_binders.h  keeper_make.h
lib/soft_circles_module/objects/soft_circle/: soft_circle_binders.h  soft_circle_getset.h  soft_circle_methods.h
src/soft_circles/: OOSB.py  eval_space.py  soft_circle.py  soft_circles_module.pyi  vec2.py
src/soft_circles/force_conveyor/: __init__.py  point_force.py  simple_drag.py  simple_stillness.py  soft_circle_gravity.py
tests/: test.cpp  test.py
